--- a/pvoutput_api_test.ipynb
+++ b/pvoutput_api_test.ipynb
@@ -53,8 +53,8 @@
     "    \"\"\"\n",
     "    \n",
     "    headers = {\n",
-    "        'X-Pvoutput-Apikey': '3f784ff6cfa27c44436f88da0c429b410687ad14',\n",
-    "        'X-Pvoutput-SystemId': '68732'}\n",
+    "        'X-Pvoutput-Apikey': 'FILL THIS IN!',\n",
+    "        'X-Pvoutput-SystemId': 'FILL THIS IN!'}\n",
     "    \n",
     "    api_base_url = 'https://pvoutput.org/service/r2/{}.jsp'.format(service)\n",
     "    api_params_str = '&'.join(['{}={}'.format(key, value) for key, value in api_params.items()])\n",
