made start on finding grid indicies to revisit

--- a/pvoutput_api_test.ipynb
+++ b/pvoutput_api_test.ipynb
@@ -1420,6 +1420,58 @@
     "* pull metadata for these systems\n",
     "* download timeseries for systems with 5-minutely data. Maybe get, say, June's data\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_results_per_query_grid_index = pv_systems.groupby('query_grid_index')['system_name'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_grid_indexes_to_revisit = num_results_per_query_grid_index[num_results_per_query_grid_index == 30].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([ 10,  15,  22,  33,  43,  52,  55,  64,  73,  74,  75,  80,  86,\n",
+       "             87,  93,  94,  95,  96,  99, 100, 101, 102, 115, 116, 117, 118,\n",
+       "            119, 120, 121, 122, 123, 124, 133, 134, 135, 137, 138, 139, 140,\n",
+       "            141, 142, 143, 145, 146, 148, 149, 150, 151, 152, 153, 154, 155,\n",
+       "            156, 157, 161, 162, 163, 164, 165, 166, 167, 168, 169, 172, 173,\n",
+       "            174, 175, 176, 177, 178, 182, 183, 184, 185, 186, 189, 190, 191,\n",
+       "            192, 193, 195],\n",
+       "           dtype='int64', name='query_grid_index')"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query_grid_indexes_to_revisit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
