downloading metadata with retry

--- a/PVOutput_analyse_metadata.ipynb
+++ b/PVOutput_analyse_metadata.ipynb
@@ -33,12 +33,12 @@
     "\n",
     "There are at least 3,026 UK PV systems in total on PVOutput.org; but it looks like about 500 don't have any valid timeseries data.\n",
     "\n",
-    "For my subsequent analyses, I'll probably use the systems scraped from the PVOutput.org/map.jsp page.  The bad news is that the map doesn't list every PV system (it seems to stop at 128 pages, with 20 PV systems per page).  But the good news is that the map listing is ranked; so the PV systems with no actual timeseries data will fall off the bottom of the ranking."
+    "For my subsequent analyses, I'll probably use the systems scraped from the PVOutput.org/map.jsp page.  The bad news is that the map doesn't list every PV system (it seems to stop at 128 pages, with 20 PV systems per page).  But the good news is that the map listing is ranked; so the PV systems with no actual timeseries data should fall off the bottom of the ranking."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
@@ -230,13 +230,6 @@
     "    (~all_metadata_df['system_2_tilt_degrees'].isnull()).sum(),\n",
     "    'UK PV systems with 2 PV arrays.')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
