--- a/PVOutput_process_HTML.ipynb
+++ b/PVOutput_process_HTML.ipynb
@@ -357,6 +357,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_metadata_df.index = pd.to_numeric(all_metadata_df.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 238,
    "metadata": {},
    "outputs": [],
