--- a/PVOutput_get_metadata.ipynb
+++ b/PVOutput_get_metadata.ipynb
@@ -20,7 +20,8 @@
    "outputs": [],
    "source": [
     "INPUT_PV_LIST_FILENAME = '/home/jack/data/pvoutput.org/processed/UK_PV_listing_metadata.hdf'\n",
-    "OUTPUT_METADATA_FILENAME = '/home/jack/data/pvoutput.org/processed/UK_PV_metadata.csv'"
+    "OUTPUT_METADATA_FILENAME = '/home/jack/data/pvoutput.org/processed/UK_PV_metadata.csv'\n",
+    "PV_STATS_FILENAME = '/home/jack/data/pvoutput.org/processed/UK_PV_stats.csv'"
    ]
   },
   {
@@ -247,6 +248,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Retrieve metadata using get_pv_metadata"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {},
@@ -381,6 +389,55 @@
    ],
    "source": [
     "!head $OUTPUT_METADATA_FILENAME"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Retrieve metadata using get_statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get stats\n",
+    "if os.path.exists(PV_STATS_FILENAME):\n",
+    "    header = False\n",
+    "    stats_processed = pd.read_csv(PV_STATS_FILENAME, index_col='system_id', usecols=['system_id'])\n",
+    "else:\n",
+    "    stats_processed = []\n",
+    "    header = True\n",
+    "    \n",
+    "pv_systems_to_get_stats = set(pv_systems_filtered.index).union(pv_sys_api_search.index)\n",
+    "\n",
+    "print(len(pv_systems_to_get_stats), 'total PV systems')\n",
+    "print(len(stats_processed), 'system IDs already loaded')\n",
+    "stats_to_process = set(pv_systems_to_get_stats) - set(stats_processed.index)\n",
+    "# re-order\n",
+    "# stats_to_process = pd.Series(1, index=stats_to_process).reindex(pv_systems_filtered.index).dropna().index\n",
+    "print(len(stats_to_process), 'system IDs to load')\n",
+    "    \n",
+    "for i, system_id in enumerate(stats_to_process):\n",
+    "    print('\\r', i, system_id, end='   ', flush=True)\n",
+    "    try:\n",
+    "        pv_stats = get_pv_statistic(system_id)\n",
+    "    except NoStatusFound:\n",
+    "        print('No status found for', system_id)\n",
+    "        # Create a blank row\n",
+    "        index = ['system_id'] + list(range(1, 11))\n",
+    "        pv_stats = pd.Series(\n",
+    "            [system_id] + ([''] * 10),\n",
+    "            index=index)\n",
+    "        pv_stats['system_id'] = int(pv_stats['system_id'])\n",
+    "    pv_stats['stats_downloaded_on_utc'] = datetime.utcnow()\n",
+    "    pv_stats = pv_stats.to_frame().T.set_index('system_id')\n",
+    "    with open(PV_STATS_FILENAME, mode='a') as fh:\n",
+    "        pv_stats.to_csv(fh, header=header)\n",
+    "    header = False"
    ]
   }
  ],
