now running download

--- a/download_pv_timeseries.ipynb
+++ b/download_pv_timeseries.ipynb
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1110,27 @@
       "\n",
       "[85 rows x 2 columns]\n",
       "Number of missing dates found so far: 883\n",
-      " system_id 0 of 829: 26965  Rate limit exceeded!  Waiting 1522 seconds.  Will retry at 2019-07-24 08:03:00.\n",
+      " system_id 0 of 829: 26965  Rate limit exceeded!  Waiting 1118 seconds.  Will retry at 2019-07-24 08:03:00.\n",
+      "Retries remaining = 5\n",
+      " system_id 1 of 829: 11542  Rate limit exceeded!  Waiting 3403 seconds.  Will retry at 2019-07-24 09:03:00.\n",
+      "Retries remaining = 5\n",
+      " system_id 3 of 829: 5701  Rate limit exceeded!  Waiting 3409 seconds.  Will retry at 2019-07-24 10:03:00.\n",
+      "Retries remaining = 5\n",
+      " system_id 5 of 829: 7225  Rate limit exceeded!  Waiting 3403 seconds.  Will retry at 2019-07-24 11:03:00.\n",
+      "Retries remaining = 5\n",
+      " system_id 7 of 829: 4771  Rate limit exceeded!  Waiting 3406 seconds.  Will retry at 2019-07-24 12:03:00.\n",
+      "Retries remaining = 5\n",
+      " system_id 9 of 829: 1872  Rate limit exceeded!  Waiting 3405 seconds.  Will retry at 2019-07-24 13:03:00.\n",
+      "Retries remaining = 5\n",
+      " system_id 11 of 829: 19504  Rate limit exceeded!  Waiting 3402 seconds.  Will retry at 2019-07-24 14:03:00.\n",
+      "Retries remaining = 5\n",
+      " system_id 13 of 829: 4126  Rate limit exceeded!  Waiting 3402 seconds.  Will retry at 2019-07-24 15:03:00.\n",
+      "Retries remaining = 5\n",
+      " system_id 15 of 829: 22850  Rate limit exceeded!  Waiting 3400 seconds.  Will retry at 2019-07-24 16:03:00.\n",
+      "Retries remaining = 5\n",
+      " system_id 17 of 829: 10156  Rate limit exceeded!  Waiting 3405 seconds.  Will retry at 2019-07-24 17:03:00.\n",
+      "Retries remaining = 5\n",
+      " system_id 19 of 829: 7313  Rate limit exceeded!  Waiting 3409 seconds.  Will retry at 2019-07-24 18:03:00.\n",
       "Retries remaining = 5\n"
      ]
     }
@@ -1118,7 +1138,9 @@
    "source": [
     "logger.info('\\n******* STARTING UP ************')\n",
     "\n",
-    "# SETUP: Find which dates, and for which system ids we already have data:\n",
+    "# Find which dates, and for which system ids we already have data:\n",
+    "# TODO: Get the full list of dates for which we have downloaded data, not just the date\n",
+    "#       range; otherwise we risk having gaps in the middle of the data.\n",
     "if os.path.exists(OUTPUT_TIMESERIES_FILENAME):\n",
     "    date_ranges_already_downloaded = {}  # {system_id: (start_date, end_date)}\n",
     "    with pd.HDFStore(OUTPUT_TIMESERIES_FILENAME, mode='r') as store:\n",
@@ -1183,7 +1205,8 @@
     "            logger.info(\"    from %s to %s\", date_range[0], date_range[-1])\n",
     "        for date in date_range:\n",
     "            api_request_i += 1\n",
-    "            logger.info(\"  system_id: %d; Date: %s;  API request number: %d\", system_id, date, api_request_i)\n",
+    "            logger.info(\"  system_id: %d; Requesting system status for %s (API request number %d)\",\n",
+    "                        system_id, date.date(), api_request_i)\n",
     "            try:\n",
     "                timeseries = get_pv_system_status(system_id, date)\n",
     "            except NoStatusFound as e:\n",
